--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15"
