--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "PencilBox-App",
   "version": "0.1",
   "authors": [
-    "Srujan Kumar Bojjam <srujan@swecha.net>"
+    "Srujan Kumar Bojjam <srujan@swecha.net>",
+    "Nikhil Jamedhar <nikhil@swecha.net>"
   ],
   "description": "Interface for launching BalaSwecha Apps",
   "keywords": [
@@ -22,6 +23,7 @@
   "dependencies": {
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
-    "angular-resource": "~1.3.15"
+    "angular-resource": "~1.3.15",
+    "angular-mocks": "~1.3.15"
   }
 }
